setup basic comparison implemenations
Signed-off-by: Jeremy Wilken <gnomation@gnomeontherun.com>

--- a/src/app/clarity-tree/clarity-tree.component.html
+++ b/src/app/clarity-tree/clarity-tree.component.html
@@ -1,1 +1,10 @@
-<p>clarity-tree works!</p>
+<h1>Clarity Tree</h1>
+
+<clr-tree [clrLazy]="true" [@.disabled]="true">
+  <clr-tree-node 
+    *clrRecursiveFor="let item of data | async; getChildren: fetchChildren" 
+    [clrExpandable]="true"
+  >
+      {{item.text}}
+  </clr-tree-node>
+</clr-tree>
