--- a/src/app/kendo-tree/kendo-tree.component.html
+++ b/src/app/kendo-tree/kendo-tree.component.html
@@ -1,1 +1,9 @@
-<p>kendo-tree works!</p>
+<h1>Kendo Tree</h1>
+
+<kendo-treeview
+  kendoTreeViewExpandable
+  [nodes]="data | async"
+  textField="text"
+  [children]="fetchChildren"
+  [hasChildren]="hasChildren"
+></kendo-treeview>
