add testing and chart to see results
Signed-off-by: Jeremy Wilken <gnomation@gnomeontherun.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
   <li role="presentation" class="nav-item">
       <button id="tab2" class="btn btn-link nav-link" type="button" routerLink="/kendo" routerLinkActive="active">Kendo</button>
   </li>
+  <li role="presentation" class="nav-item">
+      <button id="tab3" class="btn btn-link nav-link" type="button" routerLink="/chart" routerLinkActive="active">Chart</button>
+  </li>
 </ul>
 
 <router-outlet></router-outlet>
