--- a/src/app/kendo-tree/kendo-tree.component.html
+++ b/src/app/kendo-tree/kendo-tree.component.html
@@ -3,7 +3,8 @@
 <kendo-treeview
   kendoTreeViewExpandable
   [nodes]="data | async"
-  textField="text"
+  textField="text"  
+  [isExpanded]="isExpanded"
   [children]="fetchChildren"
   [hasChildren]="hasChildren"
 ></kendo-treeview>
