--- a/src/app/clarity-tree/clarity-tree.component.html
+++ b/src/app/clarity-tree/clarity-tree.component.html
@@ -1,8 +1,9 @@
 <h1>Clarity Tree</h1>
 
-<clr-tree [clrLazy]="true" [@.disabled]="true">
+<clr-tree [clrLazy]="true" [@.disabled]="false">
   <clr-tree-node 
     *clrRecursiveFor="let item of data | async; getChildren: fetchChildren" 
+    [clrExpanded]="item.id === 1 && expand === true"
     [clrExpandable]="true"
   >
       {{item.text}}
