--- a/src/app/kendo-tree/kendo-tree.component.html
+++ b/src/app/kendo-tree/kendo-tree.component.html
@@ -1,5 +1,7 @@
 <h1>Kendo Tree</h1>
 
+<p>Note, the tree is programmatically controlled right now, so it won't expand manually.</p>
+
 <kendo-treeview
   kendoTreeViewExpandable
   [nodes]="data | async"
