--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
-<ul class="nav" role="tablist">
-  <li role="presentation" class="nav-item">
-      <button id="tab1" class="btn btn-link nav-link" type="button" routerLink="/clarity" routerLinkActive="active">Clarity</button>
-  </li>
-  <li role="presentation" class="nav-item">
-      <button id="tab2" class="btn btn-link nav-link" type="button" routerLink="/kendo" routerLinkActive="active">Kendo</button>
-  </li>
-  <li role="presentation" class="nav-item">
-      <button id="tab3" class="btn btn-link nav-link" type="button" routerLink="/chart" routerLinkActive="active">Chart</button>
-  </li>
-</ul>
+<div class="content">
+  <ul class="nav" role="tablist">
+    <li role="presentation" class="nav-item">
+        <button id="tab1" class="btn btn-link nav-link" type="button" routerLink="/clarity" routerLinkActive="active">Clarity</button>
+    </li>
+    <li role="presentation" class="nav-item">
+        <button id="tab2" class="btn btn-link nav-link" type="button" routerLink="/kendo" routerLinkActive="active">Kendo</button>
+    </li>
+    <li role="presentation" class="nav-item">
+        <button id="tab3" class="btn btn-link nav-link" type="button" routerLink="/chart" routerLinkActive="active">Chart</button>
+    </li>
+  </ul>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
