--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,6 +1,8 @@
 <h1>Kendo Clarity Tree Comparison</h1>
 
-<p>There are 4 series of tests run, each with different total nodes. Each test is run with 1000, 3000, 5000, and 10000 nodes. This test is setup with both using a basic asynchronos tree view with the same numer of nodes and nothing else.</p>
+<p>There are 4 series of tests run, each with different total nodes. Each test is run with 1000, 3000, 5000, and 10000 nodes. This test is setup with both using a basic lazy loaded tree view with the same numer of nodes and nothing else. Each node will generate a duplicate of the same number of nodes forever.</p>
+
+<p>This helps isolate the two implementations and show the comparison in isolation. There may be variance between runs, due to resource allocation and other runtime constraints. However, these tests are running on the same CI/CD pipeline each time, so they should be pretty similar. If there is a large outlier, it should be rerun to see if it persists.</p>
 
 <ol>
   <li>Clarity Create - This test calculates the total time to render a Clarity tree with a certain numer of top level nodes.</li>
@@ -22,3 +24,63 @@
 
   style="width: 100%; height: 400px; display: block;"
 ></highcharts-chart>
+
+<h2>Results in a Table</h2>
+
+<table class="table">
+  <tr>
+    <th>Test</th>
+    <th>Kendo Time</th>
+    <th>Clarity Time</th>
+    <th>Difference</th>
+  </tr>
+  <tr>
+    <td>Create 1000</td>
+    <td>{{kendoCreate[0]}}</td>
+    <td>{{clarityCreate[0]}}</td>
+    <td>{{clarityCreate[0] - kendoCreate[0]}} ({{(clarityCreate[0] / kendoCreate[0]) | percent}})</td>
+  </tr>
+  <tr>
+    <td>Create 3000</td>
+    <td>{{kendoCreate[1]}}</td>
+    <td>{{clarityCreate[1]}}</td>
+    <td>{{clarityCreate[1] - kendoCreate[1]}} ({{(clarityCreate[1] / kendoCreate[1]) | percent}})</td>
+  </tr>
+  <tr>
+    <td>Create 5000</td>
+    <td>{{kendoCreate[2]}}</td>
+    <td>{{clarityCreate[2]}}</td>
+    <td>{{clarityCreate[2] - kendoCreate[2]}} ({{(clarityCreate[2] / kendoCreate[2]) | percent}})</td>
+  </tr>
+  <tr>
+    <td>Create 10000</td>
+    <td>{{kendoCreate[3]}}</td>
+    <td>{{clarityCreate[3]}}</td>
+    <td>{{clarityCreate[3] - kendoCreate[3]}} ({{(clarityCreate[3] / kendoCreate[3]) | percent}})</td>
+  </tr>
+
+  <tr>
+    <td>Expand 1000</td>
+    <td>{{kendoExpand[0]}}</td>
+    <td>{{clarityExpand[0]}}</td>
+    <td>{{clarityExpand[0] - kendoExpand[0]}} ({{(clarityExpand[0] / kendoExpand[0]) | percent}})</td>
+  </tr>
+  <tr>
+    <td>Expand 3000</td>
+    <td>{{kendoExpand[1]}}</td>
+    <td>{{clarityExpand[1]}}</td>
+    <td>{{clarityExpand[1] - kendoExpand[1]}} ({{(clarityExpand[1] / kendoExpand[1]) | percent}})</td>
+  </tr>
+  <tr>
+    <td>Expand 5000</td>
+    <td>{{kendoExpand[2]}}</td>
+    <td>{{clarityExpand[2]}}</td>
+    <td>{{clarityExpand[2] - kendoExpand[2]}} ({{(clarityExpand[2] / kendoExpand[2]) | percent}})</td>
+  </tr>
+  <tr>
+    <td>Expand 10000</td>
+    <td>{{kendoExpand[3]}}</td>
+    <td>{{clarityExpand[3]}}</td>
+    <td>{{clarityExpand[3] - kendoExpand[3]}} ({{(clarityExpand[3] / kendoExpand[3]) | percent}})</td>
+  </tr>
+</table>
